// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitTest does a close fit 1`] = `
Array [
  Object {
    "x": 4.5,
    "y": 100.01336417949835,
  },
  Object {
    "x": 12.5,
    "y": 49.97380179514486,
  },
  Object {
    "x": 20.5,
    "y": 0.1867018040750901,
  },
  Object {
    "x": 28.5,
    "y": 0,
  },
  Object {
    "x": 36.5,
    "y": 0,
  },
  Object {
    "x": 44.5,
    "y": 0,
  },
  Object {
    "x": 52.5,
    "y": 0,
  },
  Object {
    "x": 60.5,
    "y": 0,
  },
]
`;

exports[`submitTest does a wide fit 1`] = `
Array [
  Object {
    "x": 4.5,
    "y": 80.39911734617654,
  },
  Object {
    "x": 12.5,
    "y": 58.98178973837426,
  },
  Object {
    "x": 20.5,
    "y": 37.782834154818666,
  },
  Object {
    "x": 28.5,
    "y": 19.50304855938605,
  },
  Object {
    "x": 36.5,
    "y": 6.471321633485642,
  },
  Object {
    "x": 44.5,
    "y": 0.3479267527815292,
  },
  Object {
    "x": 52.5,
    "y": 0,
  },
  Object {
    "x": 60.5,
    "y": 0,
  },
]
`;
